<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/grey">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:id="@+id/linearLayout">

    <TextView
        android:layout_width="79dp"
        android:layout_height="31dp"
        android:text="@string/tvUsername"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_weight="0.44"
        android:id="@+id/tvUsername"
        android:textColor="@color/green"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvCategory"
        android:layout_weight="0.41"
        android:id="@+id/tvCategory"
        android:textColor="@color/green"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvQcm"
        android:layout_weight="0.20"
        android:id="@+id/tvQcm"
        android:textColor="@color/green"/>

</LinearLayout>


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvQuestion"
        android:layout_weight="0.20"
        android:layout_marginTop="86dp"
        android:gravity="center"
        android:id="@+id/tvQuestion"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <ListView
        android:layout_width="139dp"
        android:layout_height="250dp"
        android:id="@+id/lvResponses"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true"
    android:id="@+id/linearLayout2">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/tvPrevious"
        android:layout_weight="0.44"
        android:id="@+id/btPrevious" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:text="@string/tvNext"
        android:layout_weight="0.44"
        android:id="@+id/btNext" />

</LinearLayout>


</RelativeLayout>
