<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/tvQcm"
        android:id="@+id/tvQcmLibelle"
        android:layout_marginTop="118dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/tvDuree" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/tvDuree"
        android:id="@+id/tvDuree"
        android:layout_below="@+id/tvQcmLibelle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/tvDureeValue"
        android:id="@+id/tvDureeValue"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/tvDuree"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="btBegin"
        android:id="@+id/btCommencer"
        android:layout_below="@+id/tvDureeValue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp" />
</RelativeLayout>